# camera-record-app

./: CMakeLists.txt  README.md
src/: main.c  main.cpp
